$Id$
===============================================================

258	Luke Howard <lukeh@padl.com>

	* fix for BUG#339: replacement code for Kerbeors
	  SASL operations
	* fix for BUG#272: nss_ldap's install target doesn't
	  always create the right solink for x86_64 glibc
	* fix for BUG#284: an error occurs during bulding with
	  cyrus-sasl2 when the compiler option 'as-needed' is used 

257	Luke Howard <lukeh@padl.com>

	* patch from Ralf Haferkamp <rhafer@suse.de>:
	  block SIGPIPE in atfork handler

256	Luke Howard <lukeh@padl.com>

	* patch from Tomas Janousek <tjanouse@redhat.com>
	  to check for pthread_once(); __pthread_once does
	  not imply __pthread_atfork being non-NULL
	* fix for BUG#315: memory corruption/crash in
	  initgroups parsing

255	Luke Howard <lukeh@padl.com>

	* fix for BUG#303: SSL port behavior change since
	  version 241
	* fix for BUG#304: fd leak in do_close_no_unbind
	* fix for BUG#313: assertion in do_init() when no
	  host/uri is configured
	* patch from Adrian Bridgett <adrian@smop.co.uk>
	  for Debian BUG#375533: Assertion failure in
	  libnss-ldap

254	Luke Howard <lukeh@padl.com>

	* fix for BUG#292: array bounds check in ldap-network.c
	* fix for BUG#296: fix stack buffer optimization
	* fix for BUG#297: gethostbyname2 queried with AF_INET6
	  returns OK with IPv4 address
	* fix for Novell BUG#215911: crasher parsing nested
	  groups

253	Luke Howard <lukeh@padl.com>

	* fix crasher if an empty buffer is passed to
	  initgroups (glibc NSS only)
	* fix for BUG#283: netgroup assertion failure in
	  Solaris mountd

252	Luke Howard <lukeh@padl.com>

	* doc/lookup_nssldap.c: rewrite for autofs-4.1.3

251	Luke Howard <lukeh@padl.com>

	* remove doc/rfc2307.txt, it is available from
	  http://www.ietf.org/rfc/rfc2307.txt
	* make objectClass a mappable attribute

250	Luke Howard <lukeh@padl.com>

	* don't use static _nss_ldap_no_members buffer,
	  causes crash when nss_ldap is unloaded and memory
	  is still referenced